--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+
+
 .App {
   text-align: center;
   display: grid;
@@ -38,12 +40,12 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 600px) {
+  .App {
+    grid-template-areas: 
+    'header header'
+    'content content';
+    grid-template-columns: 1fr;
+    grid-gap: 0;
   }
 }
-
